# 2024ESWContest_free_1088

./: .gitignore  README.md
bird_alert_autodriving/: CMakeLists.txt  package.xml
bird_alert_autodriving/nodes/: control_straight
bird_alert_core/: CMakeLists.txt  package.xml
bird_alert_core/nodes/: bird_alert_core_mode_decider  bird_alert_core_node_controller.py
bird_alert_detect/: CMakeLists.txt  detect_obstacle  package.xml
bird_alert_detect/nodes/: detect_camera_road  detect_lidar  detect_obstacle
bird_autodriving/bird_autodriving/: CMakeLists.txt
bird_autodriving/bird_autodriving/launch/: bird_autodriving.launch
bird_autodriving/bird_autodriving_core/: CMakeLists.txt  setup.py
bird_autodriving/bird_autodriving_core/nodes/: core_node.py
bird_camera/bird_detection/: CMakeLists.txt.save.1  package.xml
bird_camera/bird_detection/src/: basic.py
bird_camera/bird_detection_1/: CMakeLists.txt  package.xml
bird_camera/bird_detection_1/launch/: bird_detection_1.launch
bird_camera/bird_detection_1/src/: detection_1.py  model_loader.py
bird_camera/camera_launch/: CMakeLists.txt  package.xml
bird_camera/camera_launch/launch/: camera.launch
bird_camera/image_compress/: CMakeLists.txt  package.xml
bird_camera/image_compress/launch/: image_compress.launch
bird_camera/image_compress/src/: image_compressor.cpp
bird_camera/image_compressor/: CMakeLists.txt  package.xml
bird_camera/image_compressor/launch/: image_compressor.launch
bird_camera/image_compressor/src/: image_compressor.py
bird_core/: CMakeLists.txt  package.xml
bird_core/launch/: bird_core.launch
bird_core/src/: core.py  lidar_processing_node.py  lidar_test_node.py
bird_detection/: CMakeLists.txt  CMakeLists.txt.save
bird_turret/: CMakeLists.txt  main2.c  pub명령어  rasptostm.py
bird_turret/bird_detection_2/: CMakeLists.txt  package.xml
bird_turret/bird_detection_2/launch/: bird_detection_2.launch
bird_turret/bird_detection_2/src/: detection_2.py
bird_turret/bird_pid/: CMakeLists.txt  lidar_avoidance_final.py  package.xml
bird_turret/bird_pid/launch/: bird_pid.launch
bird_turret/bird_pid/src/: pid.py
bird_turret/bird_turret/: package.xml
bird_turret/bird_turret/launch/: bird_turret.launch
bird_turret/bird_turret/src/: rasptostm.py
bird_turret/src/: rasptostm.py
bird_turret/stm32/: .cproject  .mxproject  .project  STM32F429ZITX_FLASH.ld  STM32F429ZITX_RAM.ld  protobird Debug.launch  protobird.ioc
bird_turret/stm32/Core/Inc/: stm32f4xx_it.h
bird_turret/stm32/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
bird_turret/stm32/Debug/: makefile  objects.list  protobird.elf  protobird.list  protobird.map
bird_turret/stm32/Debug/Core/Src/: freertos.d  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_hal_timebase_tim.d  stm32f4xx_it.cyclo  stm32f4xx_it.su  subdir.mk
bird_turret/stm32/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
bird_turret/stm32v2/: .cproject  .mxproject  .project  stm32v2 Debug.launch  stm32v2.ioc
bird_turret/stm32v2/Core/Inc/: main.h  stm32f4xx_it.h
bird_turret/stm32v2/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
bird_turret/stm32v2/Debug/: makefile  stm32v2.elf  stm32v2.list  stm32v2.map
bird_turret/stm32v2/Debug/Core/Src/: main.cyclo  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.su  subdir.mk
bird_turret/stm32v2/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
launch/: CMakeLists.txt  package.xml
launch/launch/: bird_alert_setup.launch  bird_alert_start.launch
